Correctly use search query in frontend
